logs/rtt.20260324-173227.log
   Compiling apas-verus v0.1.0 (/home/milnes/projects/APAS-VERUS-agent1)
error[E0432]: unresolved imports `crate::Chap37::BSTBBAlphaStEph::BSTBBAlphaStEph::tree_is_bb`, `crate::Chap37::BSTBBAlphaStEph::BSTBBAlphaStEph::weight_balanced`
  --> src/Chap37/BSTBBAlphaMtEph.rs:31:59
   |
31 |     use crate::Chap37::BSTBBAlphaStEph::BSTBBAlphaStEph::{tree_is_bb, weight_balanced};
   |                                                           ^^^^^^^^^^  ^^^^^^^^^^^^^^^ no `weight_balanced` in `Chap37::BSTBBAlphaStEph::BSTBBAlphaStEph`
   |                                                           |
   |                                                           no `tree_is_bb` in `Chap37::BSTBBAlphaStEph::BSTBBAlphaStEph`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `apas-verus` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `apas-verus` (lib test) due to 1 previous error
error: command `/home/milnes/.rustup/toolchains/1.94.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --release` exited with code 101
Elapsed: 10s
